[tool.poetry]
name = "oliver"
version = "0.1.0"
description = ""
authors = ["Barath <barath.c@happyfox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
crewai = {extras = ["tools"], version = "^0.35.8"}
python-dotenv = "^1.0.1"
unstructured = "^0.14.9"
psutil = "^6.0.0"
python-pptx = "^0.6.23"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
